extends Control

func _on_PE_pressed():
	get_tree().change_scene("res://Cenas/Poderes/Executivo/Executivo.tscn") 
	#Escolhe o poder Executivo

func _on_PL_pressed():
	if Global.etapa2:
		get_tree().change_scene("res://Cenas/Poderes/Legislativo/Debates/Debate.tscn") 
		#Escolhe o poder Legislativo

func _on_PJ_pressed():
	if Global.etapa2:
		get_tree().change_scene("res://Cenas/Poderes/Judici치rio/Judici치rio.tscn") 
		#Escolhe o poder Judici치rio 

func _on_voltar_pressed():
	get_tree().change_scene("res://Cenas/Interface do Usu치rio/MainMenu.tscn")
